MD iMap Template Change Log

7/3/2014
* CSS corrections to allow for color changes to Home Button and recently added tools when themes are changed.  (Themes:  imap, gray, blue, green, purple, orange)
* Placement adjustments to Search and Zoom to County tools to allow better map viewing on smaller form factor screens.
* Adjustment in Table of Contents (_TOCNode.js) to correct anomalies between map symbology and Table of Contents symbology.  ("tempArray[j].url == rends[i].url" now using label, "tempArray[j].label == rends[i].label")
* Changed zoom extents for the ZoomToCounty tool.  Some counties were zooming within their boundaries. 
* Changed a parameter in Query to "like" instead of "=" to give more leeway for a choice in select by attribute query.
* Adjusted a configuration setting that corrects a tab choice when configuring the template via ArcGIS Online.  If you wanted to use and select the Query tab but not the Add Data tab, you would have gotten both anyway.
* Updated some REST service links to use now maps on Geodata.md.gov (ie., services provided to: printtask, zoomtocounty, geometryserviceurl)
* Changed link on "Powered by MDiMap" icon from http://mdimap.townson.edu/portal/ to http://imap.maryland.gov/Pages/default.aspx 
* Added some extra commentary in code.
* Added missing semicolons in several locations in application. 

4/22/2014
* Code for a needed array in _TOCNode.js that handles duplicate symbology that was added in a November 20, 2013 update was missing from latter updates.  It is re-introduced here.

2/28/2014
* Added "Zoom to County" ability via zoom-to-feature tool.
* Added "Home Button" for user to return to map's initial extent.
* Added Query ability for a provided ArcGIS Online (AGOL) webmap via URL or "hard coded" within app.js.
* Added Query Tool and floating pane for Query Results.
* Added ability to download query results into comma separated value (.CSV) file from the Floating Pane.
* Ability to sort query results in Floating Pane.