@@ -17,7 +17,8 @@
 		<link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.9/js/dojo/dojox/grid/enhanced/resources/EnhancedGrid_rtl.css">
 		<link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.9/js/dojo/dojox/grid/enhanced/resources/EnhancedGrid.css">
 		<!-- <link rel="stylesheet" href="http://js.arcgis.com/3.8/js/dojo/dojox/grid/resources/claroGrid.css"> -->
-        <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.9/js/esri/css/esri.css">
+		<!-- An error in version 3.9 in esri.css causes buttons on popup title area to malfunction.  Using version 3.8 until corrected. -->
+        <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.8/js/esri/css/esri.css">
         <link rel="stylesheet" type="text/css" href="src/css/main.css">
         <!--[if IE]>
           <link rel="stylesheet" type="text/css" href="src/css/ie.css" />
